fix: adjust name's component across repo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@inubekit/inputs",
+  "name": "@inubekit/input",
   "homepage": "https://inubeds.vercel.app/",
   "author": "inube",
   "main": "dist/index.es.js",
@@ -86,7 +86,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/selsa-inube/inubekit-inputs.git"
+    "url": "git+https://github.com/selsa-inube/inubekit-input.git"
   },
   "auto": {
     "plugins": [
