--- a/.autorc.json
+++ b/.autorc.json
@@ -10,7 +10,7 @@
     ]
   ],
   "owner": "selsa-inube",
-  "repo": "inubekit-inputs",
+  "repo": "inubekit-input",
   "name": "cmarin001",
   "email": "cmarin6051@gmail.com"
 }
